set(EXECUTABLE_SOURCES main.cpp)

add_executable(${CMAKE_PROJECT_NAME} ${EXECUTABLE_SOURCES})

target_link_libraries(${CMAKE_PROJECT_NAME}
    PRIVATE ${LIBRARY_BUBBLE}
    PRIVATE ${LIBRARY_INSERTION}
    PRIVATE ${LIBRARY_SELECTION}
    PRIVATE ${LIBRARY_SHELL}
    PRIVATE ${LIBRARY_QUICK})